--- a/templates/account-details.html
+++ b/templates/account-details.html
@@ -9,16 +9,15 @@
                 <div class="position-sticky top-0">
                     <div class="text-center pt-5">
                         <div class="d-table position-relative mx-auto mt-2 mt-lg-4 pt-5 mb-3">
-                            <img src="{% static 'img/avatar/18.jpg' %}" class="d-block rounded-circle" width="120"
-                                 alt="John Doe">
+                            <img src="{{ user.image.url }}" class="d-block rounded-circle" width="120" alt="John Doe">
                             <button type="button"
                                     class="btn btn-icon btn-light bg-white btn-sm border rounded-circle shadow-sm position-absolute bottom-0 end-0 mt-4"
                                     data-bs-toggle="tooltip" data-bs-placement="bottom" title="Change picture">
                                 <i class="bx bx-refresh"></i>
                             </button>
                         </div>
-                        <h2 class="h5 mb-1">John Doe</h2>
-                        <p class="mb-3 pb-3">jonny@email.com</p>
+                        <h2 class="h5 mb-1">{{ user.first_name }} {{ user.last_name }}</h2>
+                        <p class="mb-3 pb-3">{{ user.email }}</p>
                         <button type="button" class="btn btn-secondary w-100 d-md-none mt-n2 mb-3"
                                 data-bs-toggle="collapse" data-bs-target="#account-menu">
                             <i class="bx bxs-user-detail fs-xl me-2"></i>
@@ -26,42 +25,22 @@
                             <i class="bx bx-chevron-down fs-lg ms-1"></i>
                         </button>
                         <div id="account-menu" class="list-group list-group-flush collapse d-md-block">
-                            <a href="account-details.html"
-                               class="list-group-item list-group-item-action d-flex align-items-center active">
+                            <a
+                                    class="list-group-item list-group-item-action d-flex align-items-center active">
                                 <i class="bx bx-cog fs-xl opacity-60 me-2"></i>
-                                Accountt Details
+                                Account Details
                             </a>
-                            <a href="account-security.html"
+                            <a href="{% url 'password_change' %}"
                                class="list-group-item list-group-item-action d-flex align-items-center">
                                 <i class="bx bx-lock-alt fs-xl opacity-60 me-2"></i>
                                 Security
-                            </a>
-                            <a href="account-notifications.html"
-                               class="list-group-item list-group-item-action d-flex align-items-center">
-                                <i class="bx bx-bell fs-xl opacity-60 me-2"></i>
-                                Notifications
-                            </a>
-                            <a href="account-messages.html"
-                               class="list-group-item list-group-item-action d-flex align-items-center">
-                                <i class="bx bx-chat fs-xl opacity-60 me-2"></i>
-                                Messages
                             </a>
                             <a href="account-saved-items.html"
                                class="list-group-item list-group-item-action d-flex align-items-center">
                                 <i class="bx bx-bookmark fs-xl opacity-60 me-2"></i>
                                 Saved Items
                             </a>
-                            <a href="account-collections.html"
-                               class="list-group-item list-group-item-action d-flex align-items-center">
-                                <i class="bx bx-collection fs-xl opacity-60 me-2"></i>
-                                My Collections
-                            </a>
-                            <a href="account-payment.html"
-                               class="list-group-item list-group-item-action d-flex align-items-center">
-                                <i class="bx bx-credit-card-front fs-xl opacity-60 me-2"></i>
-                                Payment Details
-                            </a>
-                            <a href="signin.html"
+                            <a href="{% url 'logout' %}"
                                class="list-group-item list-group-item-action d-flex align-items-center">
                                 <i class="bx bx-log-out fs-xl opacity-60 me-2"></i>
                                 Sign Out
@@ -76,7 +55,7 @@
                     <h1 class="h2 pt-xl-1 pb-3">Account Details</h1>
                     <!-- Basic info -->
                     <h2 class="h5 text-primary mb-4">Basic info</h2>
-                    <form class="needs-validation border-bottom pb-3 pb-lg-4" novalidate>
+                    <form class="needs-validation border-bottom pb-3 pb-lg-4">
                         <div class="row pb-2">
                             <div class="col-sm-6 mb-4">
                                 <label for="fn" class="form-label fs-base">First name</label>
