--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -9,9 +9,12 @@
                         <div class="position-sticky top-0">
                             <div class="text-center pt-5">
                                 <div class="d-table position-relative mx-auto mt-2 mt-lg-4 pt-5 mb-3">
-                                    <img src="{{ user.image.url }}" class="d-block rounded-circle" width="120" alt="John Doe">
-                                    <button type="button" class="btn btn-icon btn-light bg-white btn-sm border rounded-circle shadow-sm position-absolute bottom-0 end-0 mt-4" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Change picture">
-                                    <i class="bx bx-refresh"></i>
+                                    <img src="{{ user.image.url }}" class="d-block rounded-circle" width="120"
+                                         alt="John Doe">
+                                    <button type="button"
+                                            class="btn btn-icon btn-light bg-white btn-sm border rounded-circle shadow-sm position-absolute bottom-0 end-0 mt-4"
+                                            data-bs-toggle="tooltip" data-bs-placement="bottom" title="Change picture">
+                                        <i class="bx bx-refresh"></i>
                                     </button>
                                 </div>
                                 <h2 class="h5 mb-1">{{ user.first_name }} {{ user.last_name }}</h2>
@@ -22,11 +25,11 @@
                                 <i class="bx bx-chevron-down fs-lg ms-1"></i>
                                 </button>
                                 <div id="account-menu" class="list-group list-group-flush collapse d-md-block">
-                                    <a href="account-details.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                                    <a href="{% url 'account-details' %}" class="list-group-item list-group-item-action d-flex align-items-center">
                                     <i class="bx bx-cog fs-xl opacity-60 me-2"></i>
-                                    Accountt Details
+                                    Account Details
                                     </a>
-                                    <a href="{% url 'password_change' %}" class="list-group-item list-group-item-action d-flex align-items-center active">
+                                    <a class="list-group-item list-group-item-action d-flex align-items-center active">
                                     <i class="bx bx-lock-alt fs-xl opacity-60 me-2"></i>
                                     Security
                                     </a>
