save post function added

--- a/templates/account-details.html
+++ b/templates/account-details.html
@@ -35,7 +35,7 @@
                                 <i class="bx bx-lock-alt fs-xl opacity-60 me-2"></i>
                                 Security
                             </a>
-                            <a href="account-saved-items.html"
+                            <a href="{% url 'account_saves' %}"
                                class="list-group-item list-group-item-action d-flex align-items-center">
                                 <i class="bx bx-bookmark fs-xl opacity-60 me-2"></i>
                                 Saved Items
