--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -33,13 +33,9 @@
                                     <i class="bx bx-lock-alt fs-xl opacity-60 me-2"></i>
                                     Security
                                     </a>
-                                    <a href="account-saved-items.html" class="list-group-item list-group-item-action d-flex align-items-center">
+                                    <a href="{% url 'account_saves' %}" class="list-group-item list-group-item-action d-flex align-items-center">
                                     <i class="bx bx-bookmark fs-xl opacity-60 me-2"></i>
                                     Saved Items
-                                    </a>
-                                    <a href="account-collections.html" class="list-group-item list-group-item-action d-flex align-items-center">
-                                    <i class="bx bx-collection fs-xl opacity-60 me-2"></i>
-                                    My Collections
                                     </a>
                                     <a href="{% url 'logout' %}" class="list-group-item list-group-item-action d-flex align-items-center">
                                     <i class="bx bx-log-out fs-xl opacity-60 me-2"></i>
