--- a/templates/base/header.html
+++ b/templates/base/header.html
@@ -58,7 +58,7 @@
                                 <hr class="dropdown-divider2">
                                 <li><a href="{% url 'account-details' %}" class="dropdown-item">Account Details</a></li>
                                 <li><a href="{% url 'password_change' %}" class="dropdown-item">Security</a></li>
-                                <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
+                                <li><a href="{% url 'account_saves' %}" class="dropdown-item">Saved Items</a></li>
                                 {#                                <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>#}
                                 <li><a href="{% url 'logout' %}" class="dropdown-item link-danger">Log Out</a></li>
                                 <hr class="dropdown-divider2">
@@ -109,7 +109,7 @@
                         <hr class="dropdown-divider2">
                         <li><a href="{% url 'account-details' %}" class="dropdown-item">Account Details</a></li>
                         <li><a href="{% url 'password_change' %}" class="dropdown-item">Security</a></li>
-                        <li><a href="account-saved-items.html" class="dropdown-item">Saved Items</a></li>
+                        <li><a href="{% url 'account_saves' %}" class="dropdown-item">Saved Items</a></li>
                         {#                        <li><a href="account-collections.html" class="dropdown-item">My Collections</a></li>#}
                         <li><a href="{% url 'logout' %}" class="dropdown-item link-danger">Log Out</a></li>
                         <hr class="dropdown-divider2">
