--- a/templates/home.html
+++ b/templates/home.html
@@ -147,13 +147,15 @@
                         <div class="swiper-slide h-auto px-2">
                             <article class="card border-0 h-100 mx-1">
                                 <div class="position-relative">
-                                    <a href="{{ post.get_absolute_url }}" class="position-absolute top-0 start-0 w-100 h-100"
-                                       aria-label="Read more"></a>
-                                    <a href="{{ post.get_absolute_url }}"
-                                       class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
-                                       data-bs-toggle="tooltip" data-bs-placement="left" title="Read later">
-                                        <i class="bx bx-bookmark"></i>
-                                    </a>
+                                    <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
+                                        <button type="submit" class="btn btn-link" value="{{ post.id }}" name="post_id">
+                                            <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
+                                               data-bs-toggle="tooltip" data-bs-placement="left"
+                                               title="Read later">
+                                                <i class="bx bx-bookmark"></i>
+                                            </a>
+                                        </button>
+                                    </form>
                                     <img src="{{ post.thumbnail.url }}" class="card-img-top" alt="Image">
                                 </div>
                                 <div class="card-body pb-4">
@@ -336,7 +338,7 @@
                                 email address!
                             </div>
                         </div>
-                        <button type="submit" class="btn btn-lg btn-primary" >Subscribe *</button>
+                        <button type="submit" class="btn btn-lg btn-primary">Subscribe *</button>
                     </form>
                     <div class="form-text fs-sm text-sm-start text-center">
                         * Yes, I agree to the <a href="#">terms</a> and <a href="#">privacy policy</a>.
