save post added to other pages to

--- a/templates/category_posts.html
+++ b/templates/category_posts.html
@@ -25,13 +25,16 @@
                         <article class="card me-xl-5 mb-4">
                             <div class="card-body">
                                 <div class="d-flex justify-content-between mb-3">
-                                    <a href="#"
-                                       class="badge fs-sm text-white bg-warning shadow-warning text-decoration-none">{{ post.category }}</a>
-                                    <a href="#"
-                                       class="btn btn-icon btn-secondary btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
-                                       data-bs-toggle="tooltip" data-bs-placement="left" title="Read later">
-                                        <i class="bx bx-bookmark"></i>
-                                    </a>
+                                    <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
+                                        <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
+                                           data-bs-toggle="tooltip" data-bs-placement="left"
+                                           title="Read later">
+                                            <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                    name="post_id">
+                                                <i class="bx bx-bookmark" style="color: black"></i>
+                                            </button>
+                                        </a>
+                                    </form>
                                 </div>
                                 <h3 class="h4">
                                     <a href="{{ post.get_absolute_url }}">{{ post.title }}</a>
@@ -57,14 +60,16 @@
                             <div class="row g-0">
                                 <div class="col-sm-5 position-relative bg-position-center bg-repeat-0 bg-size-cover rounded-3"
                                      style="background-image: url({{ post.thumbnail.url }}); min-height: 15rem;">
-                                    <a href="{{ post.get_absolute_url }}"
-                                       class="position-absolute top-0 start-0 w-100 h-100"
-                                       aria-label="Read more"></a>
-                                    <a href="#"
-                                       class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
-                                       data-bs-toggle="tooltip" data-bs-placement="left" title="Read later">
-                                        <i class="bx bx-bookmark"></i>
-                                    </a>
+                                    <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
+                                        <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
+                                           data-bs-toggle="tooltip" data-bs-placement="left"
+                                           title="Read later">
+                                            <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                    name="post_id">
+                                                <i class="bx bx-bookmark" style="color: black"></i>
+                                            </button>
+                                        </a>
+                                    </form>
                                 </div>
                                 <div class="col-sm-7">
                                     <div class="card-body px-0 pt-sm-0 ps-sm-4 pb-0 pb-sm-4">
@@ -94,7 +99,6 @@
                     <!-- Item -->
                 {% endfor %}
                 <!-- Paginator-->
-                {#                {% if posts.has_other_pages %}#}
                 <nav aria-label="Page navigation example">
                     <ul class="pagination justify-content-center pt-lg-3 pt-1">
                         <li class="page-item">
@@ -135,7 +139,6 @@
                         {% endif %}
                     </ul>
                 </nav>
-                {#                {% endif %}#}
 
             </div>
             <!-- Sidebar (Offcanvas below lg breakpoint) -->
