--- a/templates/home.html
+++ b/templates/home.html
@@ -154,7 +154,7 @@
                                            title="Read later">
                                             <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
                                                     name="post_id">
-                                                <i class="bx bx-bookmark"></i>
+                                                <i class="bx bx-bookmark" style="color: black"></i>
                                             </button>
                                         </a>
                                     </form>
@@ -216,11 +216,16 @@
                              style="background-image: url({{ post.image.url }}); min-height: 15rem;">
                             <a href="{{ post.get_absolute_url }}" class="position-absolute top-0 start-0 w-100 h-100"
                                aria-label="Read more"></a>
-                            <a href="{{ post.get_absolute_url }}"
-                               class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
-                               data-bs-toggle="tooltip" data-bs-placement="left" title="Read later">
-                                <i class="bx bx-bookmark"></i>
-                            </a>
+                            <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
+                                <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
+                                   data-bs-toggle="tooltip" data-bs-placement="left"
+                                   title="Read later">
+                                    <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                            name="post_id">
+                                        <i class="bx bx-bookmark" style="color: black"></i>
+                                    </button>
+                                </a>
+                            </form>
                         </div>
                         <div class="col-sm-8">
                             <div class="card-body">
