--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -77,7 +77,8 @@
                         </a>
                     </div>
                     <form action="{% url 'like_post' post.pk %}" method="post">{% csrf_token %}
-                        <button class="btn btn-lg btn-outline-secondary" type="submit" value="{{ post.id }}" name="post_id">
+                        <button class="btn btn-lg btn-outline-secondary" type="submit" value="{{ post.id }}"
+                                name="post_id">
                             <i class="bx bx-like me-2 lead"></i>
                             Like it
                             <span class="badge bg-primary shadow-primary mt-n1 ms-3">{{ post.likes.all.count }}</span>
@@ -258,14 +259,16 @@
                     <div class="swiper-slide h-auto pb-3">
                         <article class="card border-0 shadow-sm h-100 mx-2">
                             <div class="position-relative">
-                                <a href="{{ rpost.get_absolute_url }}"
-                                   class="position-absolute top-0 start-0 w-100 h-100"
-                                   aria-label="Read more"></a>
-                                <a href="{{ rpost.get_absolute_url }}"
-                                   class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
-                                   data-bs-toggle="tooltip" data-bs-placement="left" title="Read later">
-                                    <i class="bx bx-bookmark"></i>
-                                </a>
+                                <form action="{% url 'save_post' post.pk %}" method="post">{% csrf_token %}
+                                    <a class="btn btn-icon btn-light bg-white border-white btn-sm rounded-circle position-absolute top-0 end-0 zindex-5 me-3 mt-3"
+                                       data-bs-toggle="tooltip" data-bs-placement="left"
+                                       title="Read later">
+                                        <button mt-0 type="submit" class="btn btn-link" value="{{ post.id }}"
+                                                name="post_id">
+                                            <i class="bx bx-bookmark" style="color: black"></i>
+                                        </button>
+                                    </a>
+                                </form>
                                 <img src="{{ rpost.thumbnail.url }}" class="card-img-top" alt="Image">
                             </div>
                             <div class="card-body pb-4">
