Contact page added and social links updated

--- a/templates/about-v1.html
+++ b/templates/about-v1.html
@@ -271,7 +271,7 @@
                                     <div class="mega-dropdown-column">
                                         <h6 class="px-3 mb-2">Contacts</h6>
                                         <ul class="list-unstyled mb-3">
-                                            <li><a href="contacts-v1.html" class="dropdown-item py-1">Contacts v.1</a>
+                                            <li><a href="contact.html" class="dropdown-item py-1">Contacts v.1</a>
                                             </li>
                                             <li><a href="contacts-v2.html" class="dropdown-item py-1">Contacts v.2</a>
                                             </li>
