--- a/templates/account-saved-items.html
+++ b/templates/account-saved-items.html
@@ -56,7 +56,7 @@
                         <h1 class="h2 mb-0">Saved Items</h1>
                         <button type="button" class="btn btn-outline-danger px-3 px-sm-4" style="cursor: progress">
                             <i class="bx bx-trash-alt fs-xl me-sm-2"></i>
-                            <span class="d-none d-sm-inline">Remove all</span>
+                            <span class="d-none d-sm-inline" style="cursor: not-allowed">Remove all</span>
                         </button>
                     </div>
                     <div class="row row-cols-1 row-cols-sm-2 gx-3 gx-lg-4">
