--- a/templates/portfolio-single-project.html
+++ b/templates/portfolio-single-project.html
@@ -228,7 +228,7 @@
                                             <div class="mega-dropdown-column">
                                                 <h6 class="px-3 mb-2">Contacts</h6>
                                                 <ul class="list-unstyled mb-3">
-                                                    <li><a href="contacts-v1.html" class="dropdown-item py-1">Contacts v.1</a></li>
+                                                    <li><a href="contact.html" class="dropdown-item py-1">Contacts v.1</a></li>
                                                     <li><a href="contacts-v2.html" class="dropdown-item py-1">Contacts v.2</a></li>
                                                 </ul>
                                                 <h6 class="px-3 mb-2">Specialty</h6>
@@ -485,7 +485,7 @@
                             <h3 class="h4 fw-normal text-light opacity-75">Want to work with us? Let’s talk</h3>
                             <a href="mailto:email@example.com" class="display-6 text-light">email@example.com</a>
                             <div class="pt-md-5 pt-4 pb-md-2">
-                                <a href="contacts-v1.html" class="btn btn-lg btn-light">Contact us</a>
+                                <a href="contact.html" class="btn btn-lg btn-light">Contact us</a>
                             </div>
                         </div>
                     </div>
