--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -63,16 +63,16 @@
                 <div class="sticky-top ms-xl-5 ms-lg-4 ps-xxl-4" style="top: 105px !important;">
                     <h6>Share this post:</h6>
                     <div class="mb-4 pb-lg-3">
-                        <a href="#" class="btn btn-icon btn-secondary btn-linkedin me-2 mb-2">
+                        <a href="https://www.linkedin.com/in/abdusamad-malikov/" class="btn btn-icon btn-secondary btn-linkedin me-2 mb-2" target="_blank">
                             <i class="bx bxl-linkedin"></i>
                         </a>
-                        <a href="#" class="btn btn-icon btn-secondary btn-facebook me-2 mb-2">
+                        <a href="https://www.facebook.com/abdusamad.malikov.18/" class="btn btn-icon btn-secondary btn-facebook me-2 mb-2" target="_blank">
                             <i class="bx bxl-facebook"></i>
                         </a>
-                        <a href="#" class="btn btn-icon btn-secondary btn-twitter me-2 mb-2">
+                        <a href="https://github.com/sevbo2003" class="btn btn-icon btn-secondary btn-twitter me-2 mb-2" target="_blank">
                             <i class="bx bxl-github"></i>
                         </a>
-                        <a href="#" class="btn btn-icon btn-secondary btn-instagram me-2 mb-2">
+                        <a href="https://www.instagram.com/abdusamad_malikov/" target="_blank" class="btn btn-icon btn-secondary btn-instagram me-2 mb-2">
                             <i class="bx bxl-instagram"></i>
                         </a>
                     </div>
